# AIOBS

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  ANALYSIS_REPORT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.simple  Dockerfile.test  Dockerfile.visualization  README.md  REVUE_PROJET.md  deploy-ux.sh  docker-compose.simple.yml  docker-compose.yml  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  start.sh  tsconfig.json
.claude/: settings.json
.claude/hooks/: verify-tests.sh
.github/workflows/: ci.yml
aiobs-sdk/: README.md  pyproject.toml
aiobs-sdk/aiobs_sdk/: __init__.py  batch.py  client.py  exceptions.py  models.py
docker/: entrypoint-test.sh
docker/grafana/: grafana.ini
docker/prometheus/: prometheus.yml
docker/victoriametrics/: vmagent.yml
docs/: AUDIT_ANALYSIS.md  CONFIGURATION.md  DEFENSE_CAPABILITIES.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  EDGE_MODE.md  FEATURES.md  MITRE_ATTACK_ICS.md  OT_CONNECTORS.md  ROADMAP_GAME_CHANGER.md  VISION.md
docs/api/: README.md
docs/architecture/: OVERVIEW.md
docs/roadmap/: ROADMAP.md
scripts/: cleanup-branches.sh  continuous_test.sh  docker-entrypoint.sh  inject_test_data.py  pillar_attack.sh  pillar_continuous_load.sh  pillar_drift.sh  pillar_scenario.sh  run_startup_tests.py  test_data_injection.py  watch_tests.py
src/: index.ts  server.ts
src/__tests__/: edge-mode.test.ts  gaskia.test.ts  governance.test.ts  it-connectors.test.ts  mitre-attack.test.ts  ot-connectors.test.ts  semantic-drift.test.ts  server.test.ts  skophia.test.ts  storage.test.ts  synapsix.test.ts  trm.test.ts
src/api/routes/: alerts.ts  business-intelligence.ts  causal.ts  cognitive.ts  compliance-auto.ts  dashboard.ts  guardrails.ts  healing.ts  ingestion.ts  metrics.ts  multi-agent.ts  services.ts  slo.ts  supply-chain.ts
src/api/services/: data-store.ts  realtime.ts
src/connectors/it/: edr-connector.ts  index.ts  pcap-connector.ts  suricata-zeek-connector.ts
src/connectors/ot/: index.ts  modbus-connector.ts  mqtt-connector.ts  opcua-connector.ts  ot-base-connector.ts  snmp-connector.ts
src/core/autonomous/: arc-engine.ts  index.ts
src/core/business/: business-impact-engine.ts  index.ts
src/core/business-intelligence/: bi-engine.ts
src/core/causal/: causal-engine.ts  causal-graph.ts  impact-assessor.ts  index.ts  root-cause-analyzer.ts
src/core/chain-dna/: chain-dna-engine.ts  index.ts
src/core/cognitive/: cognitive-engine.ts  degradation-tracker.ts  drift-detector.ts  hallucination-detector.ts  index.ts  reliability-analyzer.ts
src/core/compliance/: compliance-engine.ts
src/core/gaskia/: index.ts  otel-pipeline.ts
src/core/guardrails/: guardrails-engine.ts
src/core/healing/: healing-engine.ts
src/core/llm-testing/: index.ts  test-scenarios.ts  testing-engine.ts  types.ts
src/core/multi-agent/: multi-agent-engine.ts
src/core/prompt-ops/: index.ts  prompt-ops-engine.ts
src/core/sbom/: index.ts  sbom-engine.ts
src/core/skophia/: index.ts  otel-pipeline.ts
src/core/types/: causal.ts  (+24 more)
src/edge-mode/: edge-buffer.ts  edge-mode-config.ts  index.ts  resync-manager.ts
src/storage/: hybrid-backend.ts  index.ts  openobserve-connector.ts  types.ts  victoriametrics-connector.ts
src/synapsix/: index.ts  it-ot-correlator.ts  mitre-ics-correlator.ts  playbook-engine.ts  semantic-alert-engine.ts
src/tests/: drift-detector.test.ts
src/trm/: federated-sync.ts  index.ts  offline-buffer.ts  trm-agent.ts
src/utils/: index.ts  logger.ts
tests/: __init__.py  conftest.py  run_tests.py
tests/generators/: __init__.py  data_generator.py
tests/visualization/: __init__.py  test_api_integration.py  test_app.py  test_causal.py  test_core.py  test_defense_soc.py  test_drift.py  test_impact.py  test_llm_testing.py  test_reliability.py  test_security.py  test_stress.py
visualization/: __init__.py  app.py  config.py  requirements.txt  run.py
visualization/alerting/: __init__.py  config.py  models.py  router.py  slack_provider.py
visualization/auth/: __init__.py  config.py  dependencies.py  jwt_handler.py  models.py  oauth2_client.py  router.py
visualization/core/: __init__.py  causal.py  cognitive.py  detectors.py  federated_observability.py  impact.py  unified_view.py
visualization/exports/: __init__.py  csv_exporter.py  pdf_exporter.py  router.py
visualization/i18n/: __init__.py  middleware.py  translations.py
visualization/ingestion/: __init__.py  backends.py  rate_limiter.py  schemas.py  service.py  validators.py
visualization/integrations/: __init__.py  base.py  mlflow_connector.py  router.py  wandb_connector.py
visualization/models/: __init__.py  schemas.py
visualization/routers/: __init__.py  assistant.py  business_intelligence.py  causal.py  cognitive.py  dashboard.py  data_injection_monitoring.py  defense_soc.py  design_config.py  exports.py  federated.py  guardrails.py  healing.py  i18n.py  ingestion.py  llm_config.py  llm_testing.py  metrics.py  monitoring.py  multi_agent.py  pillars.py  profiles.py  realtime.py  supply_chain.py
visualization/services/: __init__.py  llm_service.py  llm_testing_service.py  pillar_simulator.py
visualization/templates/: base.html  business-intelligence.html  causal.html  compliance.html  dashboard.html  defense_soc.html  dirigeant.html  executive.html  federated.html  financier.html  finops.html  global.html  greenops.html  guardrails.html  healing.html  hub.html  impact.html  index.html  juridique.html  llm-testing.html  monitoring.html  multi-agent.html  onboarding.html  personas.html  security.html  settings_llm.html  supply-chain.html  tech.html  unified.html  welcome.html
visualization/tests/: __init__.py  conftest.py  test_injection_detection.py
(+42 files in other folders)
